# sc_project

./: CMakeLists.txt  gitnotes.txt  readme.md  sc_struct.h  todo.txt
sc_common/: sc_arcs.cpp  sc_arcs.h  sc_block.h  sc_struct.h
sc_curves_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl.h  readme.md
sc_documents/sc_curves_gui/: mainwindow.cpp  mainwindow.ui
sc_documents/sc_engine/: CMakeLists.txt  sc_engine.h  sc_formula.h
sc_documents/sc_interpolate/: CMakeLists.txt  sc_arcs.h  sc_interpolate.cpp  sc_interpolate.h  sc_struct.h
sc_documents/sc_planner/: CMakeLists.txt  mainwindow.h  opengl.cpp
sc_documents/sc_primitives_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  opengl.cpp
sc_engine/: CMakeLists.txt  readme.md  sc_engine.cpp  sc_engine.h  sc_formula.h
sc_interpolate/: CMakeLists.txt  readme.md  sc_arcs.cpp  sc_interpolate.cpp  sc_interpolate.h  sc_lines.cpp  sc_struct.h
sc_look_ahead/: CMakeLists.txt  sc_look_ahead.cpp  sc_look_ahead.h
sc_optimizer/: CMakeLists.txt  readme.md  sc_optimizer.cpp  sc_optimizer.h
sc_optimizer_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
sc_pid/: CMakeLists.txt  readme.md  sc_pid.cpp  sc_pid.h
sc_pid_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
sc_planner/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  sc_arcs.cpp  sc_arcs.h  sc_lines.cpp  sc_lines.h  sc_planner.cpp  sc_planner.h
sc_planner_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  opengl.cpp  readme.md
sc_primitives_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  readme.md
